tests/baselines/reference/typeFromPropertyAssignment32.symbols
=== tests/cases/conformance/salsa/ns.ts ===
namespace ExpandoMerge {
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))

    export var p3 = 333;
>p3 : Symbol(p3, Decl(ns.ts, 1, 14))

    export var p4 = 4; // ok
>p4 : Symbol(p4, Decl(ns.ts, 2, 14), Decl(expando.ts, 6, 1))

    export var p5 = 5; // ok
>p5 : Symbol(p5, Decl(ns.ts, 3, 14), Decl(expando.ts, 8, 24))

    export let p6 = 6; // error: duplicate
>p6 : Symbol(p6, Decl(ns.ts, 4, 14))

    export let p7 = 7; // error: duplicate
>p7 : Symbol(p7, Decl(ns.ts, 5, 14))
}
namespace ExpandoMerge {
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))

    export var p2 = 222;
>p2 : Symbol(p2, Decl(ns.ts, 8, 14))
}
=== tests/cases/conformance/salsa/expando.ts ===
function ExpandoMerge(n: number) {
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>n : Symbol(n, Decl(expando.ts, 0, 22))

    return n;
>n : Symbol(n, Decl(expando.ts, 0, 22))
}
ExpandoMerge.p1 = 111
>ExpandoMerge.p1 : Symbol(ExpandoMerge.p1, Decl(expando.ts, 2, 1))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>p1 : Symbol(ExpandoMerge.p1, Decl(expando.ts, 2, 1))

ExpandoMerge.m = function(n: number) {
>ExpandoMerge.m : Symbol(ExpandoMerge.m, Decl(expando.ts, 3, 21))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>m : Symbol(ExpandoMerge.m, Decl(expando.ts, 3, 21))
>n : Symbol(n, Decl(expando.ts, 4, 26))

    return n + 1;
>n : Symbol(n, Decl(expando.ts, 4, 26))
}
ExpandoMerge.p4 = 44444; // ok
>ExpandoMerge.p4 : Symbol(ExpandoMerge.p4, Decl(ns.ts, 2, 14), Decl(expando.ts, 6, 1))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>p4 : Symbol(ExpandoMerge.p4, Decl(ns.ts, 2, 14), Decl(expando.ts, 6, 1))

ExpandoMerge.p6 = 66666; // error: duplicate
>ExpandoMerge.p6 : Symbol(ExpandoMerge.p6, Decl(ns.ts, 4, 14))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>p6 : Symbol(ExpandoMerge.p6, Decl(ns.ts, 4, 14))

ExpandoMerge.p5 = 555555; // should be ok
>ExpandoMerge.p5 : Symbol(ExpandoMerge.p5, Decl(ns.ts, 3, 14), Decl(expando.ts, 8, 24))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>p5 : Symbol(ExpandoMerge.p5, Decl(ns.ts, 3, 14), Decl(expando.ts, 8, 24))

ExpandoMerge.p7 = 777777; // error: duplicate
>ExpandoMerge.p7 : Symbol(ExpandoMerge.p7, Decl(ns.ts, 5, 14))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>p7 : Symbol(ExpandoMerge.p7, Decl(ns.ts, 5, 14))

var n = ExpandoMerge.p1 + ExpandoMerge.p2 + ExpandoMerge.p3 + ExpandoMerge.p4 + ExpandoMerge.p5 + ExpandoMerge.m(12) + ExpandoMerge(1001);
>n : Symbol(n, Decl(expando.ts, 11, 3))
>ExpandoMerge.p1 : Symbol(ExpandoMerge.p1, Decl(expando.ts, 2, 1))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>p1 : Symbol(ExpandoMerge.p1, Decl(expando.ts, 2, 1))
>ExpandoMerge.p2 : Symbol(ExpandoMerge.p2, Decl(ns.ts, 8, 14))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>p2 : Symbol(ExpandoMerge.p2, Decl(ns.ts, 8, 14))
>ExpandoMerge.p3 : Symbol(ExpandoMerge.p3, Decl(ns.ts, 1, 14))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>p3 : Symbol(ExpandoMerge.p3, Decl(ns.ts, 1, 14))
>ExpandoMerge.p4 : Symbol(ExpandoMerge.p4, Decl(ns.ts, 2, 14), Decl(expando.ts, 6, 1))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>p4 : Symbol(ExpandoMerge.p4, Decl(ns.ts, 2, 14), Decl(expando.ts, 6, 1))
>ExpandoMerge.p5 : Symbol(ExpandoMerge.p5, Decl(ns.ts, 3, 14), Decl(expando.ts, 8, 24))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>p5 : Symbol(ExpandoMerge.p5, Decl(ns.ts, 3, 14), Decl(expando.ts, 8, 24))
>ExpandoMerge.m : Symbol(ExpandoMerge.m, Decl(expando.ts, 3, 21))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))
>m : Symbol(ExpandoMerge.m, Decl(expando.ts, 3, 21))
>ExpandoMerge : Symbol(ExpandoMerge, Decl(ns.ts, 0, 0), Decl(ns.ts, 6, 1), Decl(expando.ts, 0, 0), Decl(expando.ts, 3, 21))

